Fix CI build